# cam_trap

./: Cargo.toml  build_service_pi.sh  settings.json
crates/playground/: Cargo.toml
crates/playground/src/: main.rs
crates/service/: Cargo.toml
crates/service/src/: camera.rs  config.rs  main.rs  output.rs
crates/trap_camera/: Cargo.toml
crates/trap_camera/src/: lib.rs
crates/trap_engine/: Cargo.toml
crates/trap_engine/src/: convert.rs  detect.rs  io.rs  lib.rs
crates/webserver/: Cargo.toml  settings.toml
crates/webserver/src/: main.rs
crates/webserver/templates/: index.html  login.html
docker/raspberry/: Dockerfile
src/: main.rs  main.rs_old  main.rs_old_2
