[package]
name = "cam_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.4"
image = "0.23.14"
chrono = "0.4"
serde_json = "1.0"
jpeg-decoder = "0.2.1"

[dependencies.rscam]
version = "0.5.5"
features = ["no_wrapper"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "1.16.1"
features = ["full"]