[package]
name = "trap_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trap_camera = { path = "../trap_camera" }
trap_engine = { path = "../trap_engine" }

chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"