[package]
name = "trap_webserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12"
axum = "0.6"
axum-sessions = "0.5.0"
lazy_static = "1.4"
rand = { version = "0.8", features = ["min_const_gen"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.28", features = ["macros", "rt-multi-thread"] }
toml = "0.7"
tower-http = { version = "0.4", features = ["fs"] }